--- a/public/index.html
+++ b/public/index.html
@@ -26,11 +26,20 @@
       z-index: -10;
       filter: brightness(0.4) blur(2px);
     }
-    header {
-      text-align: center;
-      margin-top: 30px;
+
+    .center-container {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
     }
-    header img {
+
+    .center-container img {
       width: 100px;
       border-radius: 50%;
       box-shadow:
@@ -39,26 +48,22 @@
         0 0 30px #00ffff,
         0 0 40px #00ffff;
     }
-    h1 {
+
+    .center-container h1 {
       margin-top: 10px;
       font-size: 28px;
       color: #00ffff;
       text-shadow: 0 0 10px #00ffff;
+      text-align: center;
     }
 
-    /* Butang Container - Tengah */
     .buttons {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 20px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90%;
-      max-width: 400px;
+      gap: 15px;
+      margin-top: 20px;
+      width: 100%;
     }
 
     .buttons button {
@@ -70,9 +75,10 @@
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
-      width: 100%;
+      width: 250px;
       box-shadow: 0 0 10px #00ffff80;
     }
+
     .buttons button:hover {
       background: #00ffff;
       color: #000;
@@ -85,7 +91,6 @@
       border: 2px solid #00ff88;
     }
 
-    /* Text berjalan bawah */
     .marquee {
       position: fixed;
       bottom: 0;
@@ -98,6 +103,7 @@
       font-size: 16px;
       animation: marquee 20s linear infinite;
     }
+
     @keyframes marquee {
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
@@ -111,16 +117,16 @@
     <source src="https://files.catbox.moe/4spq8s.mp4" type="video/mp4">
   </video>
 
-  <header>
+  <div class="center-container">
     <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
     <h1>PRODUK BY DAMX STORE</h1>
-  </header>
 
-  <div class="buttons">
-    <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
-    <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
-    <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-    <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
+    <div class="buttons">
+      <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
+      <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
+      <button onclick="window.location.href='murban.html'">MURBAN 777</button>
+      <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
+    </div>
   </div>
 
   <!-- TEXT BERJALAN -->
