--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
-      width: 250px;
+      width: 300px; /* DIBESARKAN */
       box-shadow: 0 0 10px #00ffff80;
     }
 
