--- a/public/index.html
+++ b/public/index.html
@@ -131,7 +131,7 @@
 
   <!-- TEXT BERJALAN -->
   <div class="marquee">
-    💠 Selamat datang ke DAMX STORE | Semua produk dijamin trusted 💠
+    💠 Selamat datang ke DAMX STORE selamat berbelanja 🙂‍↕️ 💠
   </div>
 
 </body>
