--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,8 @@
       <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
       <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
       <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-      <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
+    <button onclick="window.location.href='https://t.me/FeedbackDamxStore'">FEEDBACK DAMX STORE</button>
+     <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
     </div>
   </div>
 
