--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s ease;
-      width: 300px; /* DIBESARKAN */
+      width: 300px;
       box-shadow: 0 0 10px #00ffff80;
     }
 
@@ -108,6 +108,26 @@
       0% { transform: translateX(100%); }
       100% { transform: translateX(-100%); }
     }
+
+    /* Tombol lagu */
+    .music-button {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 1000;
+    }
+
+    .music-button button {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background: #00ffff;
+      color: black;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+      box-shadow: 0 0 10px #00ffffaa;
+    }
   </style>
 </head>
 <body>
@@ -117,6 +137,15 @@
     <source src="https://files.catbox.moe/4spq8s.mp4" type="video/mp4">
   </video>
 
+  <!-- TOMBOL MUSIK -->
+  <div class="music-button">
+    <button onclick="toggleMusic()">🎵</button>
+  </div>
+
+  <!-- AUDIO -->
+  <audio id="music1" src="https://files.catbox.moe/h6vuqi.mp4" loop></audio>
+  <audio id="music2" src="https://files.catbox.moe/5pqy89.mp4" loop></audio>
+
   <div class="center-container">
     <img src="https://files.catbox.moe/b5pfw2.jpg" alt="Logo DAMX STORE">
     <h1>PRODUK BY DAMX STORE</h1>
@@ -125,8 +154,8 @@
       <button onclick="window.location.href='bug.html'">SCRIPT BUG WHATSAPP</button>
       <button onclick="window.location.href='panel.html'">PANEL BY DAMX</button>
       <button onclick="window.location.href='murban.html'">MURBAN 777</button>
-    <button onclick="window.location.href='https://t.me/FeedbackDamxStore'">FEEDBACK DAMX STORE</button>
-     <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
+      <button onclick="window.location.href='https://t.me/FeedbackDamxStore'">FEEDBACK DAMX STORE</button>
+      <button onclick="window.location.href='cart.html'" class="cart">🛒 Cek Cart Anda</button>
     </div>
   </div>
 
@@ -134,6 +163,25 @@
   <div class="marquee">
     💠 Selamat datang ke DAMX STORE selamat berbelanja 🙂‍↕️ 💠
   </div>
+
+  <!-- SCRIPT LAGU -->
+  <script>
+    let isPlaying = false;
+    function toggleMusic() {
+      const music1 = document.getElementById("music1");
+      const music2 = document.getElementById("music2");
+
+      if (!isPlaying) {
+        music1.play();
+        music2.play();
+        isPlaying = true;
+      } else {
+        music1.pause();
+        music2.pause();
+        isPlaying = false;
+      }
+    }
+  </script>
 
 </body>
 </html>
